@@ -3,6 +3,7 @@ What's new in hachoir-parser 1.2.2?
 
  * HachoirParserList() is no more a singleton:
    use HachoirParserList.getInstance() to get a singleton
+ * createParser() has an option tags argument: can be used to force a parser
 
 What's new in hachoir-parser 1.2.1?
 ===================================
